Bug 1351339: Compute text style changes when the parent is a display: contents element. r=heycam

MozReview-Commit-ID: GWPNevfP4xc